# cpp-design-patterns

./: CMakeLists.txt  README.md  main.cpp
composite/: CMakeLists.txt
composite/head/: binary_node.h  express.h  express_node.h  unary_node.h  value_node.h
composite/src/: CMakeLists.txt  binary_node.cpp  express.cpp  express_node.cpp  unary_node.cpp  value_node.cpp
factory/: ioc_container.h
factory/head/: car.h  vehicle.h
factory/src/: CMakeLists.txt  car.cpp  ioc_container_demo.cpp
file_operation/: binary_in.cpp  binary_out.cpp  str_in.cpp  str_out.cpp
file_operation/data/: file_str_data.txt
file_operation/file_build/: binary_in  binary_out  str_in  str_out
file_operation/head/: Student.h  file_operation.h
head/: bus.h
mediator/: CMakeLists.txt  demo.cpp
mediator/head/: colleague.h  cpu_simulation.h  mediator.h  motherboard.h  soundcard_simu.h  videocard_simu.h
mediator/src/: CMakeLists.txt  colleague.cpp  cpu_simulation.cpp  mediator.cpp  motherboard.cpp  soundcard_simu.cpp  videocard_simu.cpp
momento/: demo.cpp
momento/head/: caretaker.h  momento.h  original_word.h
momento/src/: CMakeLists.txt  caretaker.cpp  momento.cpp  original_word.cpp
proxy/data/: test_data.txt  user_info.txt
proxy/head/: abstract_server.h  bug_manage.h  proxy_bug_manage.h  proxy_server.h  real_bug_manage.h  real_server.h
proxy/src/: CMakeLists.txt  proxy_bug_manage.cpp  proxy_server.cpp  real_bug_manage.cpp  real_server.cpp
src/: CMakeLists.txt  bus.cpp  ioc_container_demo.cpp
status/: CMakeLists.txt  demo.cpp
status/head/: black_state.h  download_manager.h  download_state.h  normal_state.h  repeated_state.h  spite_state.h
status/src/: CMakeLists.txt  black_state.cpp  download_manager.cpp  download_state.cpp  normal_state.cpp  repeated_state.cpp  spite_state.cpp
